--- a/crates/driver/Cargo.toml
+++ b/crates/driver/Cargo.toml
@@ -54,6 +54,7 @@ solver = { path = "../solver" }
 tracing = { workspace = true }
 warp = { workspace = true }
 web3 = { workspace = true }
+rand.workspace = true
 
 [dev-dependencies]
 maplit = { workspace = true }
