--- a/crates/driver/Cargo.toml
+++ b/crates/driver/Cargo.toml
@@ -35,6 +35,7 @@ itertools = "0.10"
 url = "2.3"
 ethabi = "18.0"
 rand = "0.8"
+web3 = "0.18"
 
 # These still use { workspace = true } because they're used at
 # the boundary between driver and shared.
@@ -54,7 +55,6 @@ shared = { path = "../shared" }
 solver = { path = "../solver" }
 tracing = { workspace = true }
 warp = { workspace = true }
-web3 = { workspace = true }
 
 [dev-dependencies]
 maplit = { workspace = true }
